Fix preview box spacing

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -90,7 +90,7 @@ header > h1 {
 	height: 40em;
 	border: 2px solid black;
 	background-color: #aeb3b7;
-	margin-left: 8em;
+	margin-left: 9%;
 	margin-bottom: 2em;
 	clear: left;
 	padding-left: 1em;
@@ -103,7 +103,7 @@ header > h1 {
 	height: 40em;
 	border: 2px solid black;
 	background-color: #aeb3b7;
-	margin-right: 9em;
+	margin-right: 10%;
 	margin-bottom: 2em;
 	padding-left: 1em;
 	padding-right: 1em;
